--- a/my_trust/templates/my_trust/SendBack.html
+++ b/my_trust/templates/my_trust/SendBack.html
@@ -8,7 +8,7 @@
 {% block content %}
 <p>
     Your Partner sent you {{group.sent_amount}}.
-    The earnings in this period are {{Constants.endowment_Receiver + {group.sent_amount}}.
+    The earnings in this period are {{ earnings }}.
     Now, you are Decider and you have {{Constants.endowment_Decider}}.
     How much will you send to your partner?
 </p>
