--- a/cont.trial/control/templates/control/Introduction.html
+++ b/cont.trial/control/templates/control/Introduction.html
@@ -8,7 +8,7 @@
 {% block content %}
 
     {% include Constants.instructions_template %}
-
+{% include Constants.table_template %}
     {% next_button %}
 
 {% endblock %}
