--- a/cont.trial/control/templates/control/Send.html
+++ b/cont.trial/control/templates/control/Send.html
@@ -17,6 +17,6 @@
     {% next_button %}
     </p>
 
-    {% include Constants.instructions_template %}
+    {% include Constants.table_template %}
 
 {% endblock %}
