--- a/cont.trial/control/templates/control/SendBack.html
+++ b/cont.trial/control/templates/control/SendBack.html
@@ -15,6 +15,6 @@
 
     {% formfield group.sent_back_amount label=prompt %}
     <p>{% next_button %}</p>
-    {% include Constants.instructions_template %}
+    {% include Constants.table_template %}
 
 {% endblock %}
