--- a/cont.trial/control/templates/control/table.html
+++ b/cont.trial/control/templates/control/table.html
@@ -1,34 +1,10 @@
-{% load otree %}
-
-<div class="card bg-light instructions">
-    <div class="card-body">
-
-    <h3>
-        Instructions
-    </h3>
-    <p>
-        There will be 10 rounds and each round has two periods.
-        <p>
-        Each round, you will be randomly and anonymously paired with another participant to play a game.
-        <p>
-        At the first period, one of you will be selected at random to be a Decider;
-        the other will be a Receiver. At the second period, your roles will be reversed.
-        So, you will be both a Decider and a Receiver each round.
-        <p>
-        Deciders are endowed with {{ Constants.endowment_Decider }};
-        Receivers with {{ Constants.endowment_Receiver }}.
-        As a Decider, you will decide which part of your endowment to transfer to the Receiver.
-        As a Receiver, you will see the transfer that has been made.
-        <p>
-        At the end of each round, you will be informed about transfers made and your earnings in that round.
-        Earnings in points is given by the product of the final value when Decider (ED)
-        with the final value when Receiver (ER): ER x ED.
-        </p>
-        The table below gives earnings for each possible combination.
-        (The earnings in money will be determined by multiplying the amount stated in points by 0,5₺.)
-        </p>
-        </p>
-        </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Payoff Table</title>
+</head>
+<body>
 
         <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;}
@@ -148,12 +124,5 @@
   </tr>
 </table>
 
-
-
-
-
-
-
-    </p>
-</div>
-</div>
+</body>
+</html>
