--- a/control/templates/control/Introduction.html
+++ b/control/templates/control/Introduction.html
@@ -8,6 +8,8 @@
 {% block content %}
 
     {% include Constants.instructions_template %}
+
+<p>You are now assigned to group : <b>{{ color }} </b></p>
 {% include Constants.table_template %}
     {% next_button %}
 
