--- a/exo/templates/exo/Introduction.html
+++ b/exo/templates/exo/Introduction.html
@@ -9,7 +9,8 @@
 
     {% include Constants.instructions_template %}
 
-<p>You are now assigned to group : <b>{{ color }} </b></p>
+<p>You are now assigned to group : <b>{{ your_color }} </b></p>
+<p>Your partner is now assigned to group : <b>{{ partner_color }} </b></p>
 {% include Constants.table_template %}
     {% next_button %}
 
