--- a/exo/templates/exo/Send.html
+++ b/exo/templates/exo/Send.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-    First Period, Your Choice
+    1. Period, Your Choice
 {% endblock %}
 
 {% block content %}
