--- a/exo/templates/exo/SendBack.html
+++ b/exo/templates/exo/SendBack.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-    Second Period, Your Choice
+    2. Period, Your Choice
 {% endblock %}
 
 {% block content %}
