--- a/control/templates/control/Results.html
+++ b/control/templates/control/Results.html
@@ -41,13 +41,13 @@
 </table>
         <p>
             The first Decider role was yours.
-            You chose to send your partner </strong> {{ group.sent_amount }}</strong> ,
+            You chose to send your partner <strong> {{ group.sent_amount }}</strong> ,
             and you had {{ player1_period1_amount }} in Period 1.
         </p>
-            Your partner returned </strong> {{ group.sent_back_amount }}</strong> ,
+            Your partner returned <strong> {{ group.sent_back_amount }}</strong> ,
             and you had {{ player1_period2_amount }} in Period 2.
         <p>
-            Your Payoff in this round   = </strong> {{ player.payoff }}</strong> .
+            Your Payoff in this round   = <strong> {{ player.payoff }}</strong> .
         </p>
         {% else %}
         <p>
@@ -83,14 +83,13 @@
 </table>
         <p>
             In the first period, you was Receiver.
-            Your partner sent you </strong> {{ group.sent_amount }}</strong> ,
+            Your partner sent you <strong> {{ group.sent_amount }}</strong> ,
             you had {{ player2_period1_amount }} in Period 1.
           </p>
-            In second period, you chose to send your partner </strong> {{ group.sent_back_amount }} </strong> ,
+            In second period, you chose to send your partner <strong> {{ group.sent_back_amount }} </strong> ,
             thus you had {{ player2_period2_amount }} in Period 2.
-
         </p>
-            Your Payoff in this round   = </strong>{{ player.payoff }}</strong>.
+            Your Payoff in this round   = <strong>{{ player.payoff }}</strong>.
         </p>
     {% endif %}
 
