--- a/control/templates/control/instructions.html
+++ b/control/templates/control/instructions.html
@@ -20,11 +20,11 @@
         <p>
         At the end of each round, you will be informed about transfers made and your earnings in that round.
         Earnings in points is given by the product of the final value when Decider (ED)
-        with the final value when Receiver (ER): ER x ED.
+        with the final value when Receiver (ER): ED x ER .
         </p>
         The table below gives earnings for each possible combination.
         You can check your possible returns based on your partner's answers.
-        (The earnings in money will be determined by multiplying the amount stated in points by 0,5₺.)
+
         </p>
         </p>
         </p>
