--- a/exo/templates/exo/Results.html
+++ b/exo/templates/exo/Results.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-    Results
+    End of round, Results
 {% endblock %}
 
 {% block content %}
@@ -41,13 +41,13 @@
 </table>
         <p>
             The first Decider role was yours.
-            You chose to send your partner {{ group.sent_amount }},
+            You chose to send your partner <strong>{{ group.sent_amount }}</strong>,
             and you had {{ player1_period1_amount }} in Period 1.
         </p>
-            Your partner returned {{ group.sent_back_amount }},
+            Your partner returned <strong>{{ group.sent_back_amount }}</strong>,
             and you had {{ player1_period2_amount }} in Period 2.
-        <p>
-            Your Payoff in this round   = {{ player.payoff }}.
+        </p>
+            Your Payoff in this round   = <strong>{{ player.payoff }}</strong>.
         </p>
         {% else %}
         <p>
@@ -83,14 +83,14 @@
 </table>
         <p>
             In the first period, you was Receiver.
-            Your partner sent you {{ group.sent_amount }},
+            Your partner sent you <strong> {{ group.sent_amount }}</strong> ,
             you had {{ player2_period1_amount }} in Period 1.
           </p>
-            In second period, you chose to send your partner {{ group.sent_back_amount }},
+            In second period, you chose to send your partner <strong> {{ group.sent_back_amount }} </strong> ,
             thus you had {{ player2_period2_amount }} in Period 2.
 
         </p>
-            Your Payoff in this round   = {{ player.payoff }}.
+            Your Payoff in this round   = <strong>{{ player.payoff }}</strong>.
         </p>
     {% endif %}
 
