--- a/exo/templates/exo/instructions.html
+++ b/exo/templates/exo/instructions.html
@@ -7,7 +7,9 @@
     <p>
         There will be 10 rounds and each round has two periods.
         <p>
+        Everybody will be randomly assigned to one of two groups, BLUE and RED groups.
         Each round, you will be randomly and anonymously paired with another participant to play a game.
+        Once the experiment starts all of you will be informed about which group are your and your partner belong to.
         <p>
         At the first period, one of you will be selected at random to be a Decider;
         the other will be a Receiver. At the second period, your roles will be reversed.
@@ -20,11 +22,11 @@
         <p>
         At the end of each round, you will be informed about transfers made and your earnings in that round.
         Earnings in points is given by the product of the final value when Decider (ED)
-        with the final value when Receiver (ER): ER x ED.
+        with the final value when Receiver (ER): ED x ER .
         </p>
         The table below gives earnings for each possible combination.
         You can check your possible returns based on your partner's answers.
-        (The earnings in money will be determined by multiplying the amount stated in points by 0,5₺.)
+
         </p>
         </p>
         </p>
