--- a/control/templates/control/Results.html
+++ b/control/templates/control/Results.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-    End of round, Results
+    At the end of round, Results
 {% endblock %}
 
 {% block content %}
@@ -88,6 +88,7 @@
           </p>
             In second period, you chose to send your partner <strong> {{ group.sent_back_amount }} </strong> ,
             thus you had {{ player2_period2_amount }} in Period 2.
+
         </p>
             Your Payoff in this round   = <strong>{{ player.payoff }}</strong>.
         </p>
