--- a/exo/templates/exo/Results.html
+++ b/exo/templates/exo/Results.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-    End of round, Results
+     At the end of round, Results
 {% endblock %}
 
 {% block content %}
