--- a/control/templates/control/Send.html
+++ b/control/templates/control/Send.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-    First Period, Your Choice
+    Period 1, Your Choice
 {% endblock %}
 
 {% block content %}
