--- a/exo/templates/exo/Results.html
+++ b/exo/templates/exo/Results.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-     At the end of round, Results
+End of round, Results
 {% endblock %}
 
 {% block content %}
@@ -17,7 +17,7 @@
 </style>
 <table class="tg">
   <tr>
-    <th class="tg-0lax"></th>
+    <th class="tg-0lax">Your</th>
     <th class="tg-0lax">Role</th>
     <th class="tg-0lax">Transfer</th>
     <th class="tg-0lax">Earnings</th>
@@ -59,7 +59,7 @@
 </style>
 <table class="tg">
   <tr>
-    <th class="tg-0lax"></th>
+    <th class="tg-0lax">Your</th>
     <th class="tg-0lax">Role</th>
     <th class="tg-0lax">Transfer</th>
     <th class="tg-0lax">Earnings</th>
