--- a/exo/templates/exo/instructions.html
+++ b/exo/templates/exo/instructions.html
@@ -7,7 +7,7 @@
     <p>
         There will be 10 rounds and each round has two periods.
         <p>
-        Everybody will be randomly assigned to one of two groups, BLUE and RED groups.
+        Everybody will be randomly assigned to one of two groups, RED and BLUE groups.
         Each round, you will be randomly and anonymously paired with another participant to play a game.
         Once the experiment starts all of you will be informed about which group are your and your partner belong to.
         <p>
