--- a/exo/templates/exo/Send.html
+++ b/exo/templates/exo/Send.html
@@ -7,12 +7,27 @@
 
 {% block content %}
 
+<p>Your group : <b>{% if your_color == 'RED' %}
+      <p style="color: red; font-size:100%;"> RED </p>
+    {% else %}
+      <p style="color: blue; font-size:100%"> BLUE </p>
+    {% endif %} </b></p>
+
+
+ <p>Your partner group : <b>{% if partner_color == 'RED' %}
+      <p style="color: red; font-size:100%;"> RED </p>
+    {% else%}
+      <p style="color: blue; font-size:100%"> BLUE </p>
+
+    {% endif %} </b></p>
+    <p>
     <p>
     You are Decider. Now you have {{Constants.endowment_Decider}}. How much will you send to Receiver?
     </p>
 
 
     {% formfield group.sent_amount label=prompt %}
+
     <p>
     {% next_button %}
     </p>
