--- a/control/templates/control/Results.html
+++ b/control/templates/control/Results.html
@@ -7,92 +7,257 @@
 
 {% block content %}
 
-{% if player.role == 'A' %}
-        <p>
+{% if player.role == 'P1' %}
+print
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg .tg-0lax{text-align:left;vertical-align:top}
+.tg .tg-lboi{border-color:inherit;text-align:left;vertical-align:middle}
+.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
 </style>
 <table class="tg">
   <tr>
-    <th class="tg-0lax">Your</th>
-    <th class="tg-0lax">Role</th>
-    <th class="tg-0lax">Transfer</th>
-    <th class="tg-0lax">Earnings</th>
+    <th class="tg-0pky">Role</th>
+    <th class="tg-0pky">Transfer</th>
+    <th class="tg-0pky">Earnings</th>
   </tr>
   <tr>
-    <td class="tg-0lax">Period 1</td>
-    <td class="tg-0lax">Decider</td>
-    <td class="tg-0lax">{{ group.sent_amount }}</td>
-    <td class="tg-0lax">{{ player1_period1_amount }}</td>
+    <td class="tg-lboi" rowspan="2">Receiver</td>
+    <td class="tg-lboi" rowspan="2">{{p2_transfer}}</td>
+    <td class="tg-lboi" rowspan="2">{{p1_receiver}}</td>
   </tr>
   <tr>
-    <td class="tg-0lax">Period 2</td>
-    <td class="tg-0lax">Receiver</td>
-    <td class="tg-0lax">{{ group.sent_back_amount }}</td>
-    <td class="tg-0lax">{{ player1_period2_amount }}</td>
   </tr>
   <tr>
-    <td class="tg-0lax" colspan="3">End of this round (ED x ER)</td>
-    <td class="tg-0lax">{{ player.payoff }}</td>
+    <td class="tg-lboi" colspan="2">Payoff </td>
+    <td class="tg-lboi">{{player.payoff}}</td>
   </tr>
 </table>
-        <p>
-            The first Decider role was yours.
-            You chose to send your partner <strong> {{ group.sent_amount }}</strong> ,
-            and you had {{ player1_period1_amount }} in Period 1.
-        </p>
-            Your partner returned <strong> {{ group.sent_back_amount }}</strong> ,
-            and you had {{ player1_period2_amount }} in Period 2.
-        <p>
-            Your Payoff in this round   = <strong> {{ player.payoff }}</strong> .
-        </p>
-        {% else %}
-        <p>
-<style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg .tg-0lax{text-align:left;vertical-align:top}
-</style>
-<table class="tg">
-  <tr>
-    <th class="tg-0lax">Your</th>
-    <th class="tg-0lax">Role</th>
-    <th class="tg-0lax">Transfer</th>
-    <th class="tg-0lax">Earnings</th>
-  </tr>
-  <tr>
-    <td class="tg-0lax">Period 1</td>
-    <td class="tg-0lax">Receiver</td>
-    <td class="tg-0lax">{{ group.sent_amount }}</td>
-    <td class="tg-0lax">{{ player2_period1_amount }}</td>
-  </tr>
-  <tr>
-    <td class="tg-0lax">Period 2</td>
-    <td class="tg-0lax">Deceider</td>
-    <td class="tg-0lax">{{ group.sent_back_amount }}</td>
-    <td class="tg-0lax">{{ player2_period2_amount }}</td>
-  </tr>
-  <tr>
-    <td class="tg-0lax" colspan="3">End of this round (ED x ER)</td>
-    <td class="tg-0lax">{{ player.payoff }}</td>
-  </tr>
-</table>
-        <p>
-            In the first period, you was Receiver.
-            Your partner sent you <strong> {{ group.sent_amount }}</strong> ,
-            you had {{ player2_period1_amount }} in Period 1.
-          </p>
-            In second period, you chose to send your partner <strong> {{ group.sent_back_amount }} </strong> ,
-            thus you had {{ player2_period2_amount }} in Period 2.
 
-        </p>
-            Your Payoff in this round   = <strong>{{ player.payoff }}</strong>.
-        </p>
-    {% endif %}
+        {% elif player.role == 'P2' %}
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg .tg-lboi{border-color:inherit;text-align:left;vertical-align:middle}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+  <tr>
+    <th class="tg-0lax">Role</th>
+    <th class="tg-0lax">Transfer</th>
+    <th class="tg-0lax">Earnings</th>
+  </tr>
+  <tr>
+    <td class="tg-lboi">Decider</td>
+    <td class="tg-lboi">{{p2_transfer}}</td>
+    <td class="tg-lboi">{{p2_decider}}</td>
+  </tr>
+  <tr>
+    <td class="tg-lboi" rowspan="2">Receiver</td>
+    <td class="tg-lboi" rowspan="2">{{p3_transfer}}</td>
+    <td class="tg-lboi" rowspan="2">{{p2_receiver}}</td>
+  </tr>
+  <tr>
+  </tr>
+  <tr>
+    <td class="tg-lboi" colspan="2">Payoff </td>
+    <td class="tg-lboi">{{player.payoff}}</td>
+  </tr>
+</table>
+
+
+        {% elif player.role == 'P3' %}
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg .tg-lboi{border-color:inherit;text-align:left;vertical-align:middle}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+  <tr>
+    <th class="tg-0lax">Role</th>
+    <th class="tg-0lax">Transfer</th>
+    <th class="tg-0lax">Earnings</th>
+  </tr>
+  <tr>
+    <td class="tg-lboi">Decider</td>
+    <td class="tg-lboi">{{p3_transfer}}</td>
+    <td class="tg-lboi">{{p3_decider}}</td>
+  </tr>
+  <tr>
+    <td class="tg-lboi" rowspan="2">Receiver</td>
+    <td class="tg-lboi" rowspan="2">{{p4_transfer}}</td>
+    <td class="tg-lboi" rowspan="2">{{p3_receiver}}</td>
+  </tr>
+  <tr>
+  </tr>
+  <tr>
+    <td class="tg-lboi" colspan="2">Payoff </td>
+    <td class="tg-lboi">{{player.payoff}}</td>
+  </tr>
+</table>
+
+
+        {% elif player.role == 'P4' %}
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg .tg-lboi{border-color:inherit;text-align:left;vertical-align:middle}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+  <tr>
+    <th class="tg-0lax">Role</th>
+    <th class="tg-0lax">Transfer</th>
+    <th class="tg-0lax">Earnings</th>
+  </tr>
+  <tr>
+    <td class="tg-lboi">Decider</td>
+    <td class="tg-lboi">{{p4_transfer}}</td>
+    <td class="tg-lboi">{{p4_decider}}</td>
+  </tr>
+  <tr>
+    <td class="tg-lboi" rowspan="2">Receiver</td>
+    <td class="tg-lboi" rowspan="2">{{p5_transfer}}</td>
+    <td class="tg-lboi" rowspan="2">{{p4_receiver}}</td>
+  </tr>
+  <tr>
+  </tr>
+  <tr>
+    <td class="tg-lboi" colspan="2">Payoff </td>
+    <td class="tg-lboi">{{player.payoff}}</td>
+  </tr>
+</table>
+
+        {% elif player.role == 'P5' %}
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg .tg-lboi{border-color:inherit;text-align:left;vertical-align:middle}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+  <tr>
+    <th class="tg-0lax">Role</th>
+    <th class="tg-0lax">Transfer</th>
+    <th class="tg-0lax">Earnings</th>
+  </tr>
+  <tr>
+    <td class="tg-lboi">Decider</td>
+    <td class="tg-lboi">{{p5_transfer}}</td>
+    <td class="tg-lboi">{{p5_decider}}</td>
+  </tr>
+  <tr>
+    <td class="tg-lboi" rowspan="2">Receiver</td>
+    <td class="tg-lboi" rowspan="2">{{p6_transfer}}</td>
+    <td class="tg-lboi" rowspan="2">{{p5_receiver}}</td>
+  </tr>
+  <tr>
+  </tr>
+  <tr>
+    <td class="tg-lboi" colspan="2">Payoff </td>
+    <td class="tg-lboi">{{player.payoff}}</td>
+  </tr>
+</table>
+        {% elif player.role == 'P6' %}
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg .tg-lboi{border-color:inherit;text-align:left;vertical-align:middle}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+  <tr>
+    <th class="tg-0lax">Role</th>
+    <th class="tg-0lax">Transfer</th>
+    <th class="tg-0lax">Earnings</th>
+  </tr>
+  <tr>
+    <td class="tg-lboi">Decider</td>
+    <td class="tg-lboi">{{p6_transfer}}</td>
+    <td class="tg-lboi">{{p6_decider}}</td>
+  </tr>
+  <tr>
+    <td class="tg-lboi" rowspan="2">Receiver</td>
+    <td class="tg-lboi" rowspan="2">{{p7_transfer}}</td>
+    <td class="tg-lboi" rowspan="2">{{p6_receiver}}</td>
+  </tr>
+  <tr>
+  </tr>
+  <tr>
+    <td class="tg-lboi" colspan="2">Payoff </td>
+    <td class="tg-lboi">{{player.payoff}}</td>
+  </tr>
+</table>
+
+
+
+        {% elif player.role == 'P7' %}
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg .tg-lboi{border-color:inherit;text-align:left;vertical-align:middle}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+  <tr>
+    <th class="tg-0lax">Role</th>
+    <th class="tg-0lax">Transfer</th>
+    <th class="tg-0lax">Earnings</th>
+  </tr>
+  <tr>
+    <td class="tg-lboi">Decider</td>
+    <td class="tg-lboi">{{p7_transfer}}</td>
+    <td class="tg-lboi">{{p7_decider}}</td>
+  </tr>
+  <tr>
+    <td class="tg-lboi" rowspan="2">Receiver</td>
+    <td class="tg-lboi" rowspan="2">{{p8_transfer}}</td>
+    <td class="tg-lboi" rowspan="2">{{p7_receiver}}</td>
+  </tr>
+  <tr>
+  </tr>
+  <tr>
+    <td class="tg-lboi" colspan="2">Payoff </td>
+    <td class="tg-lboi">{{player.payoff}}</td>
+  </tr>
+</table>
+
+
+         {% else %}
+
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+.tg .tg-lboi{border-color:inherit;text-align:left;vertical-align:middle}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+  <tr>
+    <th class="tg-0lax">Role</th>
+    <th class="tg-0lax">Transfer</th>
+    <th class="tg-0lax">Earnings</th>
+  </tr>
+  <tr>
+    <td class="tg-lboi">Decider</td>
+    <td class="tg-lboi">{{p8_transfer}}</td>
+    <td class="tg-lboi">{{p8_decider}}</td>
+  </tr>
+  <tr>
+    <td class="tg-lboi" colspan="2">Payoff </td>
+    <td class="tg-lboi">{{player.payoff}}</td>
+  </tr>
+</table>
+
+{% endif %}
 
     <p>{% next_button %}</p>
 
