--- a/endo/templates/endo/P5.html
+++ b/endo/templates/endo/P5.html
@@ -2,11 +2,10 @@
 {% load otree %}
 
 {% block title %}
-    Period 2, Your Choice
+    3 period until now.
 {% endblock %}
 
 {% block content %}
-
 
 <p>Your group : <b>{% if your_color == 'RED' %}
       <p style="color: red; font-size:100%;"> RED </p>
@@ -21,18 +20,17 @@
       <p style="color: blue; font-size:100%"> BLUE </p>
 
     {% endif %} </b></p>
-
-    <p>
-    <p>
+ <p>
 
 <p>
-    Your Partner sent you {{group.sent_amount}}.
-    Your earnings at the end of the first period are {{earnings}}.
-    Now, you are Decider and you have {{Constants.endowment_Decider}}.
-    How much will you send to your partner?
+    You are the Decider and you have {{Constants.endowment_Decider}}.
+    How much of your {{Constants.endowment_Decider}} do you transfer (0-7)?
 </p>
 
-    {% formfield group.sent_back_amount label=prompt %}
+    {% formfield group.sent_5 label=prompt %}
+
+
+
     <p>{% next_button %}</p>
     {% include Constants.table_template %}
 
