--- a/endo/templates/endo/P8.html
+++ b/endo/templates/endo/P8.html
@@ -30,3 +30,8 @@
     {% formfield group.sent_8 label=prompt %}
 
 
+
+    <p>{% next_button %}</p>
+    {% include Constants.table_template %}
+
+{% endblock %}
